--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@mantine/core": "^6.0.10",
-    "@mantine/dates": "^6.0.10",
-    "@mantine/hooks": "^6.0.10",
-    "@tabler/icons-react": "^2.18.0",
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@emotion/react": "^11.10.6",
+    "@mantine/core": "^6.0.1",
+    "@mantine/dates": "^6.0.1",
+    "@mantine/hooks": "^6.0.1",
+    "@tabler/icons-react": "^2.9.0",
+    "@types/node": "18.15.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "dayjs": "^1.11.7",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "firebase": "^9.22.0",
-    "next": "13.4.2",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.4",
+    "firebase": "^9.17.2",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4",
+    "sharp": "^0.32.1",
+    "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
